examples/java/failing/annotations/Base.java
class MyClass {
        public void doSomething();
}
